[gd_scene load_steps=3 format=3 uid="uid://7fvgg0d66cvd"]

[ext_resource type="Script" path="res://scrips/first.gd" id="1_5nbtr"]
[ext_resource type="PackedScene" uid="uid://b1xaffbvk386h" path="res://scenes/badges.tscn" id="2_ugt7g"]

[node name="main" type="Node2D"]
script = ExtResource("1_5nbtr")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -114.0
offset_top = -74.0
offset_right = 1153.0
offset_bottom = 2001.0
color = Color(0.273092, 0.869946, 3.85046e-07, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="press to save_load" type="Label" parent="CanvasLayer"]
visibility_layer = 524289
z_index = 4096
z_as_relative = false
offset_left = 370.0
offset_top = 19.0
offset_right = 526.0
offset_bottom = 42.0
text = "hoald \"=\" or alt\"z\"
 to save/load"

[node name="saveload controll" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 6.0
offset_right = 46.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/saveload controll"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="save" type="Button" parent="CanvasLayer/saveload controll/VBoxContainer"]
layout_mode = 2
text = "save"

[node name="load" type="Button" parent="CanvasLayer/saveload controll/VBoxContainer"]
layout_mode = 2
text = "load"

[node name="save2" type="Button" parent="CanvasLayer/saveload controll/VBoxContainer"]
layout_mode = 2
text = "save 2"

[node name="load2" type="Button" parent="CanvasLayer/saveload controll/VBoxContainer"]
layout_mode = 2
text = "load 2"

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 11.0
offset_top = 225.0
offset_right = 199.0
offset_bottom = 248.0
rotation = 1.57079
scale = Vector2(0.488119, 0.488119)
text = "@elara_shelley on tiktok"

[node name="badges_badges" parent="CanvasLayer" instance=ExtResource("2_ugt7g")]
offset_top = 815.0
offset_bottom = 59.0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true
autostart = true

[node name="stamps" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[connection signal="pressed" from="CanvasLayer/saveload controll/VBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CanvasLayer/saveload controll/VBoxContainer/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="CanvasLayer/saveload controll/VBoxContainer/save2" to="." method="_on_save_2_pressed"]
[connection signal="pressed" from="CanvasLayer/saveload controll/VBoxContainer/load2" to="." method="_on_load_2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="stamps" to="." method="_on_stamps_timeout"]
